--- a/app/assets/stylesheets/components/_flipper.scss
+++ b/app/assets/stylesheets/components/_flipper.scss
@@ -1,8 +1,51 @@
 .flipper{
+  box-shadow: 0 1px 9px rgba(173, 173, 173, 0.6);
   width:700px;
   height:500px;
   position:relative;
   perspective:1500px;
+}
+
+.right {
+  border-left: solid 1px #c4c4c4;
+  padding: 70px;
+}
+.left {
+  border-left: solid 1px #c4c4c4;
+  padding: 70px;
+}
+
+.shadow-left {
+    position: absolute;
+    left: 220px;
+    top: 1px;
+    height: 499px;
+    width: 132px;
+    z-index: 100;
+    opacity: 0.6;
+    background: rgba(226,226,226,0);
+    background: -moz-linear-gradient(45deg, rgba(226,226,226,0) 0%, rgba(189,189,189,1) 100%);
+    background: -webkit-gradient(left bottom, right top, color-stop(0%, rgba(226,226,226,0)), color-stop(100%, rgba(189,189,189,1)));
+    background: -webkit-linear-gradient(45deg, rgba(226,226,226,0) 0%, rgba(189,189,189,1) 100%);
+    background: -o-linear-gradient(45deg, rgba(226,226,226,0) 0%, rgba(189,189,189,1) 100%);
+    background: -ms-linear-gradient(45deg, rgba(226,226,226,0) 0%, rgba(189,189,189,1) 100%);
+    background: linear-gradient(90deg, rgba(255, 255, 255, 0) 0%, rgb(61, 61, 61) 135%);
+}
+.shadow-right {
+    z-index: 100;
+    opacity: 0.6;
+    position: absolute;
+    right: 0px;
+    top: 1px;
+    height: 499px;
+    width: 349px;
+    background: rgba(226,226,226,0);
+    background: -moz-linear-gradient(45deg, rgba(226,226,226,0) 0%, rgba(189,189,189,1) 100%);
+    background: -webkit-gradient(left bottom, right top, color-stop(0%, rgba(226,226,226,0)), color-stop(100%, rgba(189,189,189,1)));
+    background: -webkit-linear-gradient(45deg, rgba(226,226,226,0) 0%, rgba(189,189,189,1) 100%);
+    background: -o-linear-gradient(45deg, rgba(226,226,226,0) 0%, rgba(189,189,189,1) 100%);
+    background: -ms-linear-gradient(45deg, rgba(226,226,226,0) 0%, rgba(189,189,189,1) 100%);
+    background: linear-gradient(-90deg, rgba(255, 255, 255, 0) 66%, #3d3d3d 135%);
 }
 
 .preview-title {
@@ -88,9 +131,11 @@
 }
 
 .payment-button {
-  margin-top: 86px;
+  margin-top: 50px;
   display: flex;
-  justify-content: flex-end;
+  justify-content: center;
+  margin-bottom: 30px;
+
 }
 
 .flipper-title {
@@ -116,3 +161,4 @@
   margin: 0 10px;
   padding: 10px 30px;
 }
+
