--- a/app/views/payments/new.html.erb
+++ b/app/views/payments/new.html.erb
@@ -1,15 +1,39 @@
 <h1>Purchase of books <%= @order.personalization_sku %></h1>
 <%= form_tag order_payments_path(@order) do %>
+
+<div class="checkout-wrapper">
   <article>
     <label class="amount">
-      <span>Amount: <%= humanized_money_with_symbol(@order.amount) %></span>
+      <div class="col-sm-12 col-md-6 book-photo-checkout">
+        <%= image_tag(@order.user.personalizations.last.book.photo, width: '100%', height: '100%') %>
+      </div>
+      <div class="col-sm-12 col-md-6 author-show">
+        <div class="description-checkout">
+          <h2><%= @order.user.personalizations.last.book.name %></h2>
+          <p>View your personalization details below:</p>
+        </div>
+        <div class="list-facts">
+          <p><i class="em em-abc"></i> <%=  @order.user.personalizations.last.character_name %></p>
+          <p><i class="em em-couple"></i> <%=  @order.user.personalizations.last.character_gender %></p>
+          <p><i class="em em-1234"></i> <%= @order.user.personalizations.last.character_age %></p>
+        </div>
+        <div class="price-delivery-checkout">
+          <p>Amount: <%= humanized_money_with_symbol(@order.amount) %></p>
+          <p>Expected delivery: <%= DateTime.now.to_date + 4%></p>
+        </div>
+
+
+        <script src="https://checkout.stripe.com/checkout.js" class="stripe-button custom-button"
+        data-key="<%= Rails.configuration.stripe[:publishable_key] %>"
+        data-name="My Book"
+        data-email="<%= current_user.email %>"
+        data-description="Book <%= @order.personalization_sku %>"
+        data-amount="<%= @order.amount_cents %>"
+        data-currency="<%= @order.amount.currency %>"></script>
+      </div>
+
     </label>
   </article>
-  <script src="https://checkout.stripe.com/checkout.js" class="stripe-button"
-    data-key="<%= Rails.configuration.stripe[:publishable_key] %>"
-    data-name="My Book"
-    data-email="<%= current_user.email %>"
-    data-description="Book <%= @order.personalization_sku %>"
-    data-amount="<%= @order.amount_cents %>"
-    data-currency="<%= @order.amount.currency %>"></script>
 <% end %>
+
+</div>
