--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -24,6 +24,29 @@
     </div>
   </div>
 
+  <div style="margin-top:50px;margin-bottom:10px">
+    <div class="line"></div>
+  </div>
+
+  <%= simple_form_for [@book, @personalization], remote: true do |f| %>
+    <% if @personalization.errors.any? %>
+      <div class="errors-container">
+        <ul>
+          <% @personalization.errors.full_messages.each do |message| %>
+          <li><%= message %></li>
+          <% end %>
+        </ul>
+      </div>
+    <% end %>
+
+    <div id="form_personalization" class="form-group">
+      <%= f.input :character_name, input_html: {class: 'form-control'}, label: false, placeholder: "name" %>
+      <%= f.input :character_age, input_html: {class: 'form-control'}, label: false, placeholder: "age" %>
+      <%= f.input :character_gender, input_html: {class: 'form-control'}, label: false, placeholder: "gender" %>
+      <%= f.submit class: 'btn btn-primary' %>
+    </div>
+  <% end %>
+  <div id="personalization-links"></div>
 
   <div style="margin-top:50px;margin-bottom:10px">
     <div class="line"></div>
@@ -56,26 +79,5 @@
     <% end %>
   </div>
 
-
-  <%= simple_form_for [@book, @personalization], remote: true do |f| %>
-    <% if @personalization.errors.any? %>
-      <div class="errors-container">
-        <ul>
-          <% @personalization.errors.full_messages.each do |message| %>
-          <li><%= message %></li>
-          <% end %>
-        </ul>
-      </div>
-    <% end %>
-
-    <div id="form_personalization" class="form-group">
-      <%= f.input :character_name, input_html: {class: 'form-control'}, label: false, placeholder: "name" %>
-      <%= f.input :character_age, input_html: {class: 'form-control'}, label: false, placeholder: "age" %>
-      <%= f.input :character_gender, input_html: {class: 'form-control'}, label: false, placeholder: "gender" %>
-      <%= f.submit class: 'btn btn-primary' %>
-    </div>
-  <% end %>
-
-  <div id="personalization-links"></div>
 </div>
 
