--- a/app/assets/stylesheets/components/_choices.scss
+++ b/app/assets/stylesheets/components/_choices.scss
@@ -7,12 +7,12 @@ $choices-font-size-lg: 16px !default;
 $choices-font-size-md: 14px !default;
 $choices-font-size-sm: 12px !default;
 $choices-guttering: 24px !default;
-$choices-border-radius: 2.5px !default;
+$choices-border-radius: 6.5px !default;
 $choices-border-radius-item: 20px !default;
 $choices-bg-color: #f9f9f9 !default;
 $choices-bg-color-disabled: #EAEAEA !default;
 $choices-bg-color-dropdown: #FFFFFF !default;
-$choices-text-color: #333333 !default;
+$choices-text-color: white !default;
 $choices-keyline-color: #DDDDDD !default;
 $choices-primary-color: #00BCD4 !default;
 $choices-disabled-color: #eaeaea !default;
@@ -120,7 +120,7 @@ $choices-button-offset: 8px !default;
   display: inline-block;
   vertical-align: top;
   width: 100%;
-  background-color: $choices-bg-color;
+  background-color: #B4D682;
   padding: 4.5px 7.5px 3.75px;
   border: 1px solid $choices-keyline-color;
   border-radius: $choices-border-radius;
@@ -187,8 +187,8 @@ $choices-button-offset: 8px !default;
   z-index: 1;
   position: absolute;
   width: 100%;
-  background-color: $choices-bg-color-dropdown;
-  border: 1px solid $choices-keyline-color;
+  background-color: #B4D682;
+  border: 1px solid #B4D682;
   top: 100%;
   margin-top: -1px;
   border-bottom-left-radius: $choices-border-radius;
@@ -240,7 +240,7 @@ $choices-button-offset: 8px !default;
       }
     }
     &.is-highlighted {
-      background-color: mix(#000000, #FFFFFF, 5%);
+      background-color: mix(#000000, #fdbd6a, 5%);
       &:after { opacity: .5; }
     }
   }
