--- a/app/assets/stylesheets/components/_indexcards.scss
+++ b/app/assets/stylesheets/components/_indexcards.scss
@@ -4,10 +4,12 @@
   width: 100%;
   margin-top: 0%;
   // background-color: white;
-  background-color: #82D0E2;
+  // background-color: #82D0E2;
+  background-color: #B4D682;
   font-size: 15px;
   margin-bottom: -50px;
   margin-top: -4%;
+  color: white;
 }
 
 
@@ -188,7 +190,7 @@
     width: 25px;
     height: 25px;
     border-radius: 50%;
-    background: #B4D682;
+    background: #fdbd6a;
     cursor: pointer;
 }
 
@@ -207,7 +209,8 @@
   // padding-bottom: 30px;
   display: flex;
   justify-content: flex-start;
-  background-color: #82D0E2;
+  // background-color: #82D0E2;
+  background-color: #B4D682;
   flex-direction: column;
   margin-top: -19px;
   margin-left: -9px;
@@ -216,11 +219,20 @@
 .apply-btn {
   background-color: #fdbd6a;
   border-color: #fdbd6a;
-  padding: 9px 20px;
+  padding: 6px 20px;
   height: 39px;
-  border-radius: 2.5px;
+  border-radius: 6.5px;
   margin-left: 12px;
+  font-family: 'Gaegu';
+  font-size: 18px;
 }
+.apply-btn:hover {
+  background-color: white;
+  color: #fdbd6a;
+  border-color: white;
+}
+
+
 
 .search-results {
 
@@ -234,10 +246,10 @@
 .search-button-index {
     .search-form {
     font-size: 14px;
-    border-radius: 2.5px;
+    border-radius: 6.5px;
     text-align: left;
-    background-color: #f9f9f9;
-    color: black !important;
+    background-color: #B4D682;
+    color: white !important;
     border-color: white;
     width: 100%;
     margin-bottom: 4%;
@@ -245,10 +257,10 @@
     padding: 0px 20px;
     height: 39px;
     -webkit-appearance: none;
-    border: none;
+    border: 1px solid white;
 
     &::placeholder {
-      color: black;
+      color: white;
     }
 
     &:focus {
