--- a/app/assets/stylesheets/components/_confirmation.scss
+++ b/app/assets/stylesheets/components/_confirmation.scss
@@ -1,6 +1,6 @@
 .site-content-confirmation {
   padding-top: 2px;
-  height: 100%;
+  min-height: 100vh;
   width: 100%;
   margin-top: 0%;
   // background-color: white;
